--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,17 +11,32 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "*",
+    "@buff/lib": "*",
+    "@buff/ui": "*",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "next": "^15.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-error-boundary": "^4.1.2",
+    "react-icons": "^5.4.0",
+    "react-timer-hook": "^3.0.8",
+    "sharp": "^0.33.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@tanstack/react-query-devtools": "^5.62.7",
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "5.5.4"
   }
 }
