--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@buff/lib": "^1.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.3",
+    "@tanstack/react-query": "^5.62.7",
+    "lucide-react": "^0.468.0",
+    "rc-drawer": "^7.2.0",
+    "tailwind-merge": "^2.5.5"
+  }
 }
