--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "packageManager": "npm@10.5.1",
   "workspaces": [
-    "apps/*",
+    "apps/web",
     "packages/*"
   ],
   "dependencies": {
