--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@buff/lib": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.3",
     "@tanstack/react-query": "^5.62.7",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.468.0",
     "rc-drawer": "^7.2.0",
     "tailwind-merge": "^2.5.5"
