--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.468.0",
     "rc-drawer": "^7.2.0",
+    "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
     "zustand": "^5.0.2"
   }
