--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@buff/lib": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.3",
+    "@radix-ui/react-switch": "^1.1.2",
     "@tanstack/react-query": "^5.62.7",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.468.0",
