--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
+    "react-number-format": "^5.4.3",
     "react-select": "^5.8.1"
   }
 }
