--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.468.0",
     "rc-drawer": "^7.2.0",
     "rc-pagination": "^5.0.0",
+    "rc-steps": "^6.0.1",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
     "zustand": "^5.0.2"
