--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "react-error-boundary": "^4.1.2",
     "react-icons": "^5.4.0",
     "react-timer-hook": "^3.0.8",
+    "react-webcam": "^7.2.0",
     "sharp": "^0.33.5",
     "zod": "^3.23.8"
   },
